# MMAP

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/content_moderation_agent/: README.md  agent.py  evaluate.py
examples/customer_support_agent/: README.md  agent.py  evaluate.py
examples/refund_agent/: README.md  agent.py  evaluate.py  generate_tests.py  test_cases.json
examples/synthetic_data/: README.md  content_moderation_tests.json  customer_support_tests.json  refund_agent_tests.json
mmap_eval/: __init__.py
mmap_eval/cli/: __init__.py  main.py
mmap_eval/core/: __init__.py  evaluator.py  metric.py  registry.py  result.py  test_loader.py
mmap_eval/metrics/: __init__.py
mmap_eval/metrics/layer1/: __init__.py  entity_extraction.py  intent_accuracy.py
mmap_eval/metrics/layer2/: __init__.py  decision_accuracy.py  hallucination_detection.py
mmap_eval/metrics/layer3/: __init__.py  api_latency.py  transaction_success.py
mmap_eval/metrics/layer4/: __init__.py  edge_case_handling.py  policy_compliance.py
mmap_eval/metrics/layer5/: __init__.py  audit_trail.py  demographic_parity.py
mmap_eval/reporters/: __init__.py  json_reporter.py  terminal_reporter.py
mmap_eval/utils/: synthetic_generator.py
