[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmap-eval"
version = "0.1.0"
description = "Multi-Modal Agent Assessment Protocol - Comprehensive evaluation framework for autonomous AI agents"
readme = "README.md"
authors = [{name = "MMAP Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["ai", "agents", "evaluation", "testing", "llm", "assessment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
analytics = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
]
viz = [
    "plotly>=5.14.0",
]
integrations = [
    "langchain>=0.1.0",
    "llama-index>=0.9.0",
]
all = [
    "mmap-eval[dev,analytics,viz,integrations]",
]

[project.scripts]
mmap = "mmap_eval.cli.main:app"

[project.urls]
Homepage = "https://github.com/traveling-Scientist/MMAP"
Documentation = "https://github.com/traveling-Scientist/MMAP#readme"
Repository = "https://github.com/traveling-Scientist/MMAP"
"Bug Tracker" = "https://github.com/traveling-Scientist/MMAP/issues"

[tool.setuptools]
packages = ["mmap_eval"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=mmap_eval --cov-report=html --cov-report=term-missing"
